--- a/ios/ExportOptions.plist
+++ b/ios/ExportOptions.plist
@@ -3,11 +3,13 @@
  "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-  <key>method</key>
-  <string>developer-id</string> <!-- não usual, mas forçado -->
-  <key>signingStyle</key>
-  <string>manual</string>
-  <key>signingCertificate</key>
-  <string></string>
+    <key>method</key>
+    <string>debugging</string>
+    <key>signingStyle</key>
+    <string>manual</string>
+    <key>stripSwiftSymbols</key>
+    <true/>
+    <key>compileBitcode</key>
+    <false/>
 </dict>
 </plist>
